--- a/templates/views/dashboard.hbs
+++ b/templates/views/dashboard.hbs
@@ -86,6 +86,7 @@
                     <button class="sidebar-btn"> Settings </button>
                 </div>
                 <div class="dropdown-content">
+                    <a href="/myprofile">My Profile</a>
                     <a href="#">Account Settings</a>
                     <a href="#">Security</a>
                     <a href="#">Notification Settings</a>
