--- a/templates/views/contactus.hbs
+++ b/templates/views/contactus.hbs
@@ -21,6 +21,7 @@
         <input type="text" name="subject" id="subject" placeholder="Subject*" required>
         <textarea rows="13" cols="13" name="message" id="message"></textarea>
         <button class="btn" type="submit"> Send </button>
+        <button class="btn"> Clear </button>
 
     
     </form>
