--- a/templates/views/internships.hbs
+++ b/templates/views/internships.hbs
@@ -25,6 +25,7 @@
                 <input type="text" name="location" placeholder="Enter City">
                 <input type="text" name="internshipSearch" placeholder="For eg : Web Development">
                 <button class="btn" id="searchInternshipBtn" type="submit"> Search Internships </button>
+                <button class="btn"> Clear </button>
 
             </form>
         </div>
