--- a/templates/views/jobs.hbs
+++ b/templates/views/jobs.hbs
@@ -7,7 +7,12 @@
 <body>
     {{>header}}
 
-    <h1> Job Search </h1>
+    <div class="jobContainer">
+
+    <h1 class="section-titles"> Job Search </h1>
+
+    </div>
+
 
     <form class="form-control" action="/jobs" method="POST">
 
