--- a/templates/views/partials/header.hbs
+++ b/templates/views/partials/header.hbs
@@ -10,8 +10,7 @@
         <nav class="header_navbar">
             <ul id="myLinks">
                 <li><a href="/"> Home Page </a> </li>
-                <li><a href="/certifications"> Certifications </a></li>
-                <li><a href="/courses"> Courses </a> </li>
+                <li><a href="/courses"> Certification Courses </a> </li>
                 <li><a href="/internships"> Internships </a></li>
                 <li><a href="/scholarships"> Scholarships </a> </li>
                 <li><a href="/grants"> Grants </a> </li>
