--- a/templates/views/jobs.hbs
+++ b/templates/views/jobs.hbs
@@ -18,6 +18,9 @@
 
     <label for="jobKeyword"> Job Keyword </label>
     <input type="text" placeholder="Enter Job Keyword" name="jobKeyword" id="jobKeyword">
+
+     <label for="jobKeyword"> Job Location </label>
+    <input type="text" placeholder="Enter Job Location" name="jobLocation" id="jobLocation">
     <button class="btn" type="submit"> Search Jobs </button>
     
     <div class="jobFilters">
