--- a/templates/views/carreradvice.hbs
+++ b/templates/views/carreradvice.hbs
@@ -7,9 +7,9 @@
 <body>
     {{>header}}
 
-    <h1> Why is Career an Important part of our lives?</h1>
+    <h1 class="section-titles"> Why is Career an Important part of our lives?</h1>
 
-    <p id="cap1">A career is an important part of our lives for several reasons:
+    <p id="cap1" class="index-para">A career is an important part of our lives for several reasons:
 
 Financial stability: Our careers provide us with a means to earn money, which is essential for meeting our basic needs and achieving financial stability. It enables us to provide for ourselves and our families, pay our bills, and save for the future.
 
@@ -21,9 +21,9 @@ Social interaction: Our careers can also provide opportunities for social intera
 
 Overall, a career is an important part of our lives because it provides us with financial stability, personal fulfillment, opportunities for professional development, and social interaction.</p>    
 
-<h1> How to prepare for Top MNC Companies? </h1>
+<h1 class="section-titles index-para"> How to prepare for Top MNC Companies? </h1>
 
-<p id="cap2"> Preparing for top multinational companies (MNCs) requires a combination of skills, knowledge, and strategy. Here are some steps you can take to prepare for these companies:
+<p class="index-para"> Preparing for top multinational companies (MNCs) requires a combination of skills, knowledge, and strategy. Here are some steps you can take to prepare for these companies:
 
 Research the companies: Start by researching the MNCs you are interested in working for. Find out about their culture, values, products, services, and the roles they offer. This will help you to tailor your resume and cover letter to the company and the specific job you are applying for.
 
@@ -39,9 +39,9 @@ Gain relevant experience: Look for internships or entry-level positions that can
 
 By following these steps, you can increase your chances of being hired by a top MNC. Remember to be persistent and keep refining your skills and strategies as you pursue your career goals.</p>
 
-<h1> Skillsets you will need in any IT Branch</h1>
+<h1 class="section-titles"> Skillsets you will need in any IT Branch</h1>
 
-<p id="cap3"> There are several skill sets that are essential for any IT professional, regardless of their specific branch. Here are some of the most important ones:
+<p class="index-para"> There are several skill sets that are essential for any IT professional, regardless of their specific branch. Here are some of the most important ones:
 
 Technical skills: IT professionals need to have a strong foundation in technical skills related to their specific branch. For example, software developers should have a strong understanding of programming languages, while network engineers should be familiar with networking protocols and infrastructure.
 
