--- a/templates/views/dashboard.hbs
+++ b/templates/views/dashboard.hbs
@@ -124,14 +124,13 @@
                 <div class="dashboardItems" id="newsContainerDashboard"></div>
 
                 <center>
-
                     <img src="/img/news.jpg" height="30%" width="60%">
-
                 </center>
 
                 <h2 class="section-titles"> What's hot? </h2>
 
-                <p class="section-para index-para">In today's global economy, multinational corporations (MNCs) play a significant
+                <p class="section-para index-para">In today's global economy, multinational corporations (MNCs) play a
+                    significant
                     role in shaping the business
                     landscape. These companies operate in multiple countries, employ thousands of people, and generate
                     billions
@@ -154,15 +153,37 @@
 
                     {{>newsContainerDashboard}}
 
-
                     {{/each}}
-
-
 
                 </div>
                 <br>
                 <button class="btn" id="loadMore" onclick="loadMore()"> Load More </button>
 
+            </section>
+
+            <section class="dashboard-section">
+
+                <h1 class="section-titles"> Jobs </h1><br>
+                <p class="index-para">
+                    The importance of jobs and finding jobs through digital portals has increased significantly in
+                    recent years.Digital job portals offer a convenient and efficient way to search and apply for jobs.
+                    Job seekers can create profiles, upload resumes, and set job preferences to receive relevant job
+                    notifications.
+                </p><br>
+
+                <h1 class="section-subtitles">
+                    Vaccancies in Top Companies
+                </h1>
+
+                <br>
+                <h1 class="section-subtitles">
+                    Job Search
+                </h1>
+
+                <p class="index-para">
+
+                    <button class="btn"> <a href="/jobs"> Job Search </a></button>
+                </p>
             </section>
             {{!-- Suggestions / Instructions --}}
 
@@ -176,26 +197,26 @@
                     Lorem ipsum dolor sit amet consectetur.
                 </p>
 
-                  <div class="image-gallery">
+                <div class="image-gallery">
 
-                <img src="/img/roadmaps/cybersec.jpg">
-                <img src="/img/roadmaps/ai.jpg">
-                <img src="/img/roadmaps/web.jpg">
-            </div>
+                    <img src="/img/roadmaps/cybersec.jpg">
+                    <img src="/img/roadmaps/ai.jpg">
+                    <img src="/img/roadmaps/web.jpg">
+                </div>
 
-              <div class="image-gallery">
+                <div class="image-gallery">
 
-                <img src="/img/roadmaps/cybersec.jpg">
-                <img src="/img/roadmaps/ai.jpg">
-                <img src="/img/roadmaps/web.jpg">
-            </div>
+                    <img src="/img/roadmaps/cybersec.jpg">
+                    <img src="/img/roadmaps/ai.jpg">
+                    <img src="/img/roadmaps/web.jpg">
+                </div>
 
-              <div class="image-gallery">
+                <div class="image-gallery">
 
-                <img src="/img/roadmaps/cybersec.jpg">
-                <img src="/img/roadmaps/ai.jpg">
-                <img src="/img/roadmaps/web.jpg">
-            </div>
+                    <img src="/img/roadmaps/cybersec.jpg">
+                    <img src="/img/roadmaps/ai.jpg">
+                    <img src="/img/roadmaps/web.jpg">
+                </div>
 
             </section>
 
@@ -203,31 +224,27 @@
 
             <div class="dashboardItems" id="coursesContainerDashboard"></div>
 
-            <h1 class="section-titles"> Courses </h1>
+            <h1 class="section-titles"> Certification Courses </h1>
 
-            <p class="section-para index-para"> The IT industry is constantly evolving, and staying up-to-date with the latest technologies and trends
-                is
-                essential for anyone looking to build a career in this field. IT industry courses can provide valuable
-                training
-                and knowledge to help you stay ahead of the curve and advance your career.</p>
+            <p class="section-para index-para"> The IT industry is constantly evolving, and staying up-to-date with the
+                latest technologies and trends is essential for anyone looking to build a career in this field. IT industry courses can provide valuable
+                training and knowledge to help you stay ahead of the curve and advance your career.</p>
 
             <div class="dashboard-subitems">
-                <h3> All available courses</h3>
+                <h1 class="section-subtitles"> All available courses</h1>
             </div>
 
-            <div class="dashboard-subitems">
-                Search Courses from various portals
+            <div class="dashboard-subitems index-para">
+                Search Certification Courses from various portals
 
-                <br><button class="btn"> <a href="/courses"> Search Courses</a></button>
+                <br><button class="btn"> <a href="/courses"> Search Certification Courses</a></button>
             </div>
 
-            <div class="dashboard-subitems">
+            <div class="dashboard-subitems index-para">
                 Purchase Courses
 
                 <br><button class="btn"> <a href="/purchaseCourses"> Purchase Courses </a></button>
             </div>
-
-
 
             {{!-- Internships Section 4 --}}
 
@@ -235,15 +252,42 @@
 
                 <h1 class="section-titles"> Internships </h1>
 
+                <p class="index-para">
+                    Internships play a significant role in a student's career development. Here are some of the key
+                    importance of internships:
 
+                    Hands-on Experience: Internships provide students with practical, real-world experience in their
+                    field of study. They bridge the gap between theoretical knowledge gained in classrooms and the
+                    practical skills required in the professional world.
+                    <br>
+                    Skill Development: Internships offer an opportunity for students to develop and enhance a wide range
+                    of skills, including technical skills, communication skills, teamwork, problem-solving, and time
+                    management. <br>
 
-                <div class="dashboard-subitems">
+                    Industry Exposure: Internships provide students with exposure to the industry they are interested
+                    in. They get to work alongside professionals, observe the work environment, and understand the
+                    industry's practices, trends, and culture. <br>
+
+                    Networking Opportunities: Internships allow students to network with professionals, colleagues, and
+                    mentors in their industry. Building connections during internships can lead to valuable references,
+                    recommendations, and potential job opportunities in the future. <br>
+
+                    Resume Building: Having internship experience on a resume makes a candidate stand out to employers.
+                    It demonstrates their proactive attitude, industry exposure, and practical skills. <br>
+
+                    Self-Discovery and Career Clarity: Internships help students explore their interests, strengths, and
+                    career preferences. They provide firsthand experience in different roles and industries, allowing
+                    students to assess their fit and align their career goals accordingly. Internships can confirm or
+                    redirect career choices, enabling students to make informed decisions about their future paths.
+                </p>
+
+                <div class="dashboard-subitems section-titles index-para">
                     Search Internships from various portals
 
                     <br><button class="btn"> <a href="/internships"> Search Courses</a></button>
                 </div>
 
-                <div class="dashboard-subitems">
+                <div class="dashboard-subitems section-titles index-para">
                     Search internships from top MNCs
 
                     <br><button class="btn"> <a href="/internships"> Search Internships </a></button>
@@ -253,38 +297,32 @@
 
             {{!-- Certification Section 5 --}}
 
-             <div class="dashboardItems" id="internshipContainerDashboard">
+            <div class="dashboardItems" id="internshipContainerDashboard">
 
                 <h1 class="section-titles"> Certifications </h1>
 
 
 
-                <div class="dashboard-subitems">
+                <div class="dashboard-subitems index-para section-titles">
                     Search Internships from various portals
 
                     <br><button class="btn"> <a href="/internships"> Search Certifications</a></button>
                 </div>
 
-                <div class="dashboard-subitems">
+                <div class="dashboard-subitems index-para section-titles">
                     Search internships from top MNCs
 
                     <br><button class="btn"> <a href="/internships"> Search Internships </a></button>
                 </div>
 
             </div>
-
             {{!-- Settings Options // For the side navbar --}}
 
-
             {{!-- TOP MNCS Locationwise Job Vaccancies --}}
-
 
             <div class="dashboardItems" id="TopMNCsContainerDashboard">
 
                 <h2> TOP MNCs </h2>
-
-
-
 
                 <div class="dashboard-subitems">
                     Vaccancies - Work from home
@@ -306,25 +344,7 @@
 
             </div>
 
-            <div class="dashboardItems" id="internshipContainerDashboard">
 
-                <h2> Internships </h2>
-
-
-
-                <div class="dashboard-subitems">
-                    Search Internships from various portals
-
-                    <br><button class="btn"> <a href="/internships"> Search Courses</a></button>
-                </div>
-
-                <div class="dashboard-subitems">
-                    Search internships from top MNCs
-
-                    <br><button class="btn"> <a href="/internships"> Search Internships </a></button>
-                </div>
-
-            </div>
 
             {{!-- Settings Options // For the side navbar --}}
 
