--- a/templates/views/jobs.hbs
+++ b/templates/views/jobs.hbs
@@ -31,6 +31,49 @@
         Hybrid <input type="checkbox"> <br>
         Remote/WFH <input type="checkbox"> <br>
     </div>
+
+         <div class="internshipData" id="filterData">
+
+
+            <div class="linkedinContainer">
+                <h1 class="section-subtitles"> Linkedin Jobs </h1>
+
+                {{#each linkedinData}}
+
+                <div class="internshipContainer">
+                    <span> Company Name : {{this.company}}</span><br>
+                    <span> Job Title : {{this.title}} </span><br>
+                    <span> Start Date : </span><br>
+                    <span> Internship Duration : </span><br>
+                    <span> Start Date : {{this.listDate}}</span><br>
+                    <span> Internship Location : {{this.location}}</span>
+                    <button class="btn"> View </button>
+                </div>
+
+                {{/each}}
+        
+            </div>
+
+            <div class="linkedinContainer">
+                <h1 class="section-subtitles"> JobRapido Jobs </h1>
+
+                {{#each jobRapidoData}}
+
+                <div class="internshipContainer">
+                    <span> Company Name : {{this.company}}</span><br>
+                    <span> Job Title : {{this.title}} </span><br>
+                    <span> Start Date : </span><br>
+                    <span> Job Duration : </span><br>
+                    <span> Start Date : </span><br>
+                    <span> Job Location : </span>
+                    <button class="btn"> View </button>
+                </div>
+
+                {{/each}}
+
+        
+            </div>
+
     </form>
 </body>
 </html>
