--- a/templates/views/registration.hbs
+++ b/templates/views/registration.hbs
@@ -12,51 +12,59 @@
 
         <h1> Registration Page </h1>
 
-        <script src="/js/cityStateCountryAPI.js">
-        </script>
-
-        <div id="loader"><img src="/img/other/loadingAirplane.gif" height: "40px" width="40px"></div>
-
-        <form class="form-reg" action="/registration" method="POST">
-            <input type="text" class="form-control" placeholder="Enter Full Name" required name="fullName">
-            <input type="text" class="form-control" placeholder="Enter Email Address" required name="email">
-            <input type="password" class="form-control" placeholder="Choose Password" required name="password">
-            <input type="password" class="form-control" placeholder="Confirm Password" required name="confirmPassword">
-
-            <label class="radio gender">
-                <input type="radio" name="gender" value="male" checked>
-                <span> Male </span>
-            </label>
-
-            <label class="radio gender">
-                <input type="radio" name="gender" value="female">
-                <span> Female </span>
-            </label>
-
-            <input type="text" class="form-control" placeholder="Enter your age " name="age">
-
-            <input type="text" class="form-control" placeholder="Choose City" name="city">
-            <input type="text" class="form-control" placeholder="Choose State" name="state">
-            <select class="reg-select" class="form-control" name="country-sel" id="country">
-                <option value=""> Country </option>
-                </select>
-            <input type="text" class="form-control" placeholder="Enter Pincode" required name="Pincode">
-
-            <input type="text" class="form-control" placeholder="Enter your college name" required name="collegeName">
-            <input type="text" class="form-control" placeholder="Enter your Branch" required name="collegeBranch">
-            <input type="text" class="form-control" placeholder="Enter your course" required name="collegeCourse">
-
-            <input type="text" class="form-control" placeholder="Current Status?" required name="currentStatus">
-
-            <input type="text" class="form-control" placeholder="Enter Security Question" required name="secQuestion">
-            <input type="text" class="form-control" placeholder="Enter Answer" required name="secQuestionAnswer">
-
-            <textarea rows="1" cols="3" id="interests" name="interests"> </textarea>
-            <button class="btn" type="submit"> Create Account </button>
-            <label class="check-box"> Remember Me? <input type="checkbox"> </label>
-            <label><a href="forgotpassword"> Forgot Password? </a></label>
-        </form>
     </div>
+
+    <script src="/js/cityStateCountryAPI.js">
+    </script>
+
+    <div id="loader"><img src="/img/other/loadingAirplane.gif" height: "40px" width="40px"></div>
+
+    <form class="form-reg-control" action="/registration" method="POST">
+        <input type="text" class="form-control" placeholder="Enter Full Name" required name="fullName">
+        <input type="text" class="form-control" placeholder="Enter Email Address" required name="email">
+        <input type="password" class="form-control" placeholder="Choose Password" required name="password">
+        <input type="password" class="form-control" placeholder="Confirm Password" required name="confirmPassword">
+
+        <label class="radio gender">
+            <input type="radio" name="gender" value="male" checked>
+            <span> Male </span>
+        </label>
+
+        <label class="radio gender">
+            <input type="radio" name="gender" value="female">
+            <span> Female </span>
+        </label>
+
+        <input type="text" placeholder="Enter your age " name="age">
+
+        <input type="text" placeholder="Choose City" name="city">
+        <input type="text" placeholder="Choose State" name="state">
+        <select class="reg-select" name="country-sel" id="country">
+            <option value=""> Country </option>
+        </select>
+        <input type="text" placeholder="Enter Pincode" required name="Pincode">
+
+        <input type="text" placeholder="Enter your college name" required name="collegeName">
+        <input type="text" class="form-control" placeholder="Enter your Branch" required name="collegeBranch">
+        <input type="text" placeholder="Enter your course" required name="collegeCourse">
+
+        <select>
+            <option value="Current Status" disabled="disabled" selected="selected" name="currentStatus" required>Please select your current status </option>
+            <option value="Student">Student</option>
+            <option value="Graduated">Graduated</option>
+        </select>
+
+        {{!-- <input type="text" placeholder="Current Status?" required name="currentStatus"> --}}
+
+        <input type="text" placeholder="Enter Security Question" required name="secQuestion">
+        <input type="text" placeholder="Enter Answer" required name="secQuestionAnswer">
+
+        <textarea rows="1" cols="3" id="interests" name="interests"> </textarea><br>
+        <button class="btn" type="submit"> Create Account </button>
+        <label class="check-box"> Remember Me? <input type="checkbox"> </label>
+
+    </form>
+
 
 </body>
 
