Commit 22 Logout All Devices feature added, User Verification in process

--- a/templates/views/dashboard.hbs
+++ b/templates/views/dashboard.hbs
@@ -470,7 +470,8 @@
                 <div class="dashboard-subitems">
                     Account Settings
 
-                    <br><button class="btn"> <a href="/internships"> Go </a></button>
+                    <br><button class="btn"> <a href="/logout"> Logout </a></button>
+                    <br><button class="btn"> <a href="/logoutAll"> Logout from all devices </a></button>
                 </div>
 
             </div>
