--- a/templates/views/help/feedback.hbs
+++ b/templates/views/help/feedback.hbs
@@ -9,7 +9,7 @@
 <body>
     {{>header}}
 
-    <h1> Feedback Form </h1>
+    <h1 class="section-titles index-para"> Feedback Form </h1>
 
     <div>
 
@@ -23,6 +23,8 @@
     </div>
 
     {{feedbackResponseText}}
+
+
 </body>
 
 <script>
