Commit 22 Logout All Devices feature added, User Verification in process

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     {{>headerMeta}}
     <title> About : CareerPilot </title>
 </head>
+
 <body>
     {{>header}}
 
     <div class="container">
 
-        <h1 class="section-titles">  About Us </h1>
+        <h1 class="section-titles"> About Us </h1>
 
     </div>
+        <p class="index-para"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, nostrum ipsam rem iure
+            perspiciatis eligendi, commodi tempora pariatur enim ipsa, illo incidunt animi consequuntur expedita minima
+            ut earum facilis. Officiis non cumque itaque soluta aperiam pariatur tempore vitae numquam, laborum,
+            voluptates repudiandae ea corrupti voluptatem nesciunt nemo id. Sed voluptatibus quia ex architecto
+            consequuntur, saepe accusantium tenetur dolore rem maxime!</p>
 
 </body>
+
 </html>
-
-
