--- a/templates/views/courses.hbs
+++ b/templates/views/courses.hbs
@@ -63,6 +63,8 @@
                     <span> Internship Duration : </span><br>
                     <span> Start Date : </span><br>
                     <span> Internship Location : </span>
+
+                    {{this.image}}
                     <button class="btn"> View </button>
                 </div>
                 {{/each}}
