--- a/templates/views/dashboard.hbs
+++ b/templates/views/dashboard.hbs
@@ -90,6 +90,8 @@
                     <a href="#">Account Settings</a>
                     <a href="#">Security</a>
                     <a href="#">Notification Settings</a>
+                    <a href="/logout">Logout </a>
+                    <a href="/logoutAll">Logout From all devices</a>
                 </div>
                 <li><a href="#">Settings</a></li>
             </ul>
@@ -470,6 +472,7 @@
                 <div class="dashboard-subitems">
                     Account Settings
 
+                    <br><button class="btn"> <a href="/myprofile"> View Profile </a></button>
                     <br><button class="btn"> <a href="/logout"> Logout </a></button>
                     <br><button class="btn"> <a href="/logoutAll"> Logout from all devices </a></button>
                 </div>
