--- a/templates/views/forgotPassword.hbs
+++ b/templates/views/forgotPassword.hbs
@@ -10,8 +10,12 @@
     <div class="section1">
 
         <form class="form-control" action="/forgotPassword" method="POST">
+
+        <h1 class="section-titles index-para"> Forgot Password </h1>
+        <p class="section-subtitles index-para"> Enter your Email Address to continue </p>
+        <input type="email" name="email" placeholder="Your Email Address">
         
-        <button class="btn" type="submit"> Search </button>
+        <button class="btn" type="submit"> Reset Password </button>
         </form>
     </div>
     
