--- a/templates/views/help/reportproblem.hbs
+++ b/templates/views/help/reportproblem.hbs
@@ -9,6 +9,10 @@
     {{>header}}
 
     <center> <h1> Report a Problem </h1></center>
+
+    <div class="form-control">
+
+    </div>
     
 </body>
 </html>
