--- a/public/css/index.css
+++ b/public/css/index.css
@@ -484,14 +484,37 @@ padding: 5px;
 
 .internshipData{
 
-    width: 80%;
+    width: 60%;
     /* border: 2px solid black; */
 }
 
 .filters{
-    width: 20%;
+    width: 30%;
     text-align: center;
+    margin: 10px;
+    background-color: whitesmoke;
+    padding:10px;
     /* border: 2px solid black; */
+}
+
+/* Notification Boxes */
+
+.errorNotifications{
+
+    background-color: rgb(175, 106, 106);
+    padding:10px;
+    margin: 10px;
+    border: 2px solid red;
+    display: none;
+}
+
+.successNotification{
+
+    background-color: rgb(154, 222, 154);
+    border: 2px solid green;
+    padding: 10px;
+    margin: 10px;
+    display: none;
 }
 
 /*  MEDIA QUERIES AND RESPONSIVENESS STUFF*/
