--- a/templates/views/help/feedback.hbs
+++ b/templates/views/help/feedback.hbs
@@ -13,10 +13,10 @@
 
     <div>
 
-        <form action="/feedback" method="POST">
-            <input type="email" name="email" id="email" placeholder="Enter your email">
-            <input type="fullName" name="fullName" id="fullName" placeholder="Enter your full name">
-            <textarea id="feedbackForm" name="feedbackForm" rows="4" cols="50"></textarea>
+        <form action="/feedback" class="form-control" method="POST">
+            <input type="email" name="email" id="email" placeholder="Enter your email" style="margin:10px;"><br>
+            <input type="fullName" name="fullName" id="fullName" placeholder="Enter your full name" style="margin:10px;"><br>
+            <textarea id="feedbackForm" name="feedbackForm" rows="4" cols="50" style="margin:10px;"></textarea><br>
 
             <button class="btn" name="submitFeedback" type="submit" onclick="feedbackResponse();"> Submit </button>
         </form>
