Commit 23 Minor Frontend Upgrades

--- a/templates/views/partials/header.hbs
+++ b/templates/views/partials/header.hbs
@@ -9,24 +9,22 @@
 
         <nav class="header_navbar">
             <ul id="myLinks">
-                <li><a href="/"> Home Page </a> </li>
-                <li><a href="/courses"> Certification Courses </a> </li>
-                <li><a href="/internships"> Internships </a></li>
-                <li><a href="/scholarships"> Scholarships </a> </li>
-                <li><a href="/grants"> Grants </a> </li>
-                <li><a href="/jobs"> Jobs </a></li>
-                <li><a href="/hackathons"> Hackathons </a></li>
+                <li><a href="/"> HOME </a> </li>
+                <li><a href="/courses"> CERTIFICATIONS </a> </li>
+                <li><a href="/internships"> INTERNSHIPS </a></li>
+                <li><a href="/scholarships"> SCHOLARSHIPS </a> </li>
+                <li><a href="/jobs"> JOBS </a></li>
             </ul>
 
         </nav>
-
         <div class="login_box">
-            <button class="btn" id="loginbtn"> <a href="/loginPage"> Login </a> </button>
-            <button class="btn" id="signupbtn"> <a href="/registration"> Sign Up </a></button>
+            <button class="btn" id="loginbtn"> <a href="/loginPage"> LOGIN </a> </button>
+            <button class="btn" id="signupbtn"> <a href="/registration"> SIGN UP </a></button>
 
             <!-- Or User Profile Icon  -->
 
         </div>
+
 
         {{!-- Hamburger Icon --}}
 
