--- a/public/css/index.css
+++ b/public/css/index.css
@@ -4,8 +4,11 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Karla', sans-serif;
+
 }
+
+/* Links */
 
 a {
     text-decoration: none;
@@ -13,20 +16,40 @@ a {
 
 /* UTILITY CLASS */
 
+/* LOADING SPINNER */
+
+#loader {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    display: none;
+}
+
+
+/* SCROLLBAR  */
+
+::-webkit-scrollbar {
+    width: 15px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #7e6bff;
+}
+
 /* Buttons */
 
 
 .btn {
 
-    background-color: #8D7BFF;
+
+    background-color: rgb(98 84 243);
+    /* background-color: #8D7BFF;  */
     color: white;
     border: 0px transparent;
-
-    /* background-color: #cbb26a; */
-    /* color: black; */
     padding: 10px;
-    /* border-radius: 12px; */
-    margin: 2px;
+    margin: 4px;
     cursor: pointer;
 }
 
@@ -40,6 +63,13 @@ a {
     padding: 0.5rem;
     margin: 0.5rem;
 
+}
+
+/* Paragraph */
+
+.paragraph{
+
+    padding:1.2rem;
 }
 
 /* Blockquote */
@@ -69,27 +99,6 @@ blockquote h3:after {
 }
 
 
-/* LOADING SPINNER */
-
-#loader {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    display: none;
-}
-
-
-/* SCROLLBAR  */
-
-::-webkit-scrollbar {
-    width: 15px;
-}
-
-::-webkit-scrollbar-thumb {
-    background: #7e6bff;
-}
 
 /* Titles & Fonts */
 
@@ -98,6 +107,21 @@ blockquote h3:after {
     text-align: center;
     padding: 1.1rem;
     font-size: 1.4rem;
+
+}
+
+.title-small{
+
+    font-size: 0.8rem;
+    color: #77748f;
+    text-align: center;
+
+}
+
+.title-big{
+    font-size: 1.7rem;
+    color: black;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .section-para {
@@ -142,15 +166,45 @@ blockquote h3:after {
     padding: 5px;
 }
 
+/* SECTION Pages */
+
+.section{
+
+    width:100%;
+    display: inline-block;
+    background-color: white !important;
+    border: 2px solid black;;
+    display: flex;
+
+
+}
+
+.left-section{
+
+    width: 47%;
+    text-align: center;
+    padding: 0.8rem;
+ 
+}
+
+.right-section{
+
+    width: 47%;
+    text-align: center;
+    padding: 0.8rem;
+}
+
+.section-grey{
+
+}
+
 
 /* HEADER SECTION */
 
 .top_header {
 
     width: 100%;
-    /* border: 2px solid black; */
-    background-color: #F5FEFD;
-    /* background-color: black; */
+    background-color: #F6F8FA;
     color: rgb(0, 0, 0);
     display: flex;
     flex-wrap: wrap;
@@ -158,14 +212,17 @@ blockquote h3:after {
     padding: 1em;
     justify-content: space-around;
     align-items: center;
+    font-family: 'Karla', sans-serif !important;
+    font-weight: 400;
 }
 
 
 #title {
     float: left;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Karla', Geneva, Tahoma, sans-serif;
     color: #735eff;
     font-size: 1.4rem;
+    font-weight: 900;
 
 }
 
@@ -192,10 +249,11 @@ blockquote h3:after {
 
     display: flex;
     flex-wrap: wrap;
+  
 }
 
 .top_header ul li {
-    padding: 9px;
+    padding: 7px;
     list-style-type: none;
 
 }
@@ -213,7 +271,8 @@ blockquote h3:after {
 
 
 .login_box {
-    /* display: inline-block; */
+    
+    margin: 0px 20px;
 }
 
 .login_box a {
@@ -248,8 +307,8 @@ blockquote h3:after {
 
 /* Navbar Search */
 
-.small_navbar input{
-    padding:3px;
+.small_navbar input {
+    padding: 3px;
     border-radius: 5px;
     border: 0px transparent;
 }
@@ -319,24 +378,24 @@ h3 {
     text-align: center;
 }
 
-.image-gallery-2{
+.image-gallery-2 {
     /* width: 80%; */
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin:20px;
+    margin: 20px;
 }
 
-.image-container{
+.image-container {
 
     margin: 10px;
 }
 
 /* Portals */
 
-.scholarshipPortal{
+.scholarshipPortal {
     margin: auto;
-    
+
 }
 
 /* Dark Section */
@@ -369,9 +428,9 @@ h3 {
 
 /* Dashboard Sidebar Dropdowns */
 
-.dropdown{
+.dropdown {
     position: relative;
-  display: inline-block;
+    display: inline-block;
 }
 
 .dropdown-content {
@@ -380,7 +439,7 @@ h3 {
 
     text-decoration: none;
     display: block;
-    text-align: left; 
+    text-align: left;
 
 }
 
@@ -420,7 +479,7 @@ h3 {
 
 /* Form Control */
 
-.form-control{
+.form-control {
 
     width: 100%;
     display: inline-block;
@@ -429,7 +488,7 @@ h3 {
 
 }
 
-.form-reg-control{
+.form-reg-control {
 
     display: inline-block;
     width: 40%;
@@ -437,78 +496,78 @@ h3 {
     margin: 30px;
 }
 
-.form-reg-control input{
-padding: 5px;
+.form-reg-control input {
+    padding: 5px;
 }
 
-.form-control input{
+.form-control input {
     padding: 10px;
 }
 
 /* Internship Section */
 
-.resultContainer{
+.resultContainer {
 
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top:30px;
+    margin-top: 30px;
 
 }
 
-.internshipContainer{
+.internshipContainer {
 
     height: 300px;
-    padding:1rem;
+    padding: 1rem;
     background-color: whitesmoke;
     display: inline-block;
     width: 300px;
 }
 
-.internshipContainer li{
+.internshipContainer li {
     list-style-type: none;
 }
 
-.internshalaContainer{
+.internshalaContainer {
 
     width: 80%;
     margin: auto;
 }
 
-.linkedinContainer{
+.linkedinContainer {
 
     width: 80%;
     margin: auto;
 }
 
 
-.internshipData{
+.internshipData {
 
     width: 60%;
     /* border: 2px solid black; */
 }
 
-.filters{
+.filters {
     width: 30%;
     text-align: center;
     margin: 10px;
     background-color: whitesmoke;
-    padding:10px;
+    padding: 10px;
     /* border: 2px solid black; */
 }
 
 /* Notification Boxes */
 
-.errorNotifications{
+.errorNotifications {
 
     background-color: rgb(175, 106, 106);
-    padding:10px;
+    padding: 10px;
     margin: 10px;
     border: 2px solid red;
     display: none;
 }
 
-.successNotification{
+.successNotification {
 
     background-color: rgb(154, 222, 154);
     border: 2px solid green;
@@ -520,10 +579,7 @@ padding: 5px;
 /*  MEDIA QUERIES AND RESPONSIVENESS STUFF*/
 
 
-.mobile-container{
-    
-   
-}
+.mobile-container {}
 
 /* #myLinks {
     display: none;
