--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -20,8 +20,32 @@
 
             <h3>Career Exploration Made Easy: Jobs, Scholarships, and More </h3>
 
-
         </main>
+
+        {{!-- <section class="section">
+
+        <div class="left-section">
+
+            <h1 class="title-small"> WELCOME TO </h1>
+            <h1 class="title-big"> CareerPilot </h1>
+            <p class="index-para paragraph"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos sapiente consequatur
+                harum
+                officiis architecto, qui eligendi quae, porro dignissimos vero voluptatem at aliquam quod laborum
+                temporibus
+                debitis omnis molestiae adipisci.</p>
+
+            <button class="btn"> CHECK OUT </button>
+
+        </div>
+
+        <div class="right-section">
+
+            <img src="">
+
+        </div>
+
+        </section> --}}
+
 
         <h1 class="section-titles"> About Us </h1>
         <h4 class="section-para index-para"> Welcome to our website, a platform designed specifically for students and
@@ -42,7 +66,6 @@
 
         </div>
 
-
         <section class="sec2 dark-section">
 
             <h1 class="section-titles"> Top IT Companies hiring now </h1>
@@ -55,7 +78,6 @@
                 technology.
 
             </div>
-
 
         </section>
 
