--- a/templates/views/help/faq.hbs
+++ b/templates/views/help/faq.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
    {{>headerMeta}}
-    <title>Frequent;y Asked Questions : CareerPilot </title>
+    <title>Frequently Asked Questions : CareerPilot </title>
 </head>
 <body>
 
