--- a/templates/views/loginPage.hbs
+++ b/templates/views/loginPage.hbs
@@ -9,6 +9,7 @@
     <h1> Login </h1>
 
     <p id="isLoginError"> {{loginErrorIfAny}} </p>
+    {{errorMsg}}
     {{!-- {{loginErrorIfAny}} --}}
 
     <form action="/login" method="POST">
