--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -24,27 +24,29 @@
 
         {{!-- <section class="section">
 
-        <div class="left-section">
+            <div class="left-section">
 
-            <h1 class="title-small"> WELCOME TO </h1>
-            <h1 class="title-big"> CareerPilot </h1>
-            <p class="index-para paragraph"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos sapiente consequatur
-                harum
-                officiis architecto, qui eligendi quae, porro dignissimos vero voluptatem at aliquam quod laborum
-                temporibus
-                debitis omnis molestiae adipisci.</p>
+                <h1 class="title-small"> WELCOME TO </h1>
+                <h1 class="title-big"> CareerPilot </h1>
+                <p class="index-para paragraph"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos sapiente
+                    consequatur
+                    harum
+                    officiis architecto, qui eligendi quae, porro dignissimos vero voluptatem at aliquam quod laborum
+                    temporibus
+                    debitis omnis molestiae adipisci.</p>
 
-            <button class="btn"> CHECK OUT </button>
+                <button class="btn"> CHECK OUT </button>
 
-        </div>
+            </div>
 
-        <div class="right-section">
+            <div class="right-section">
 
-            <img src="">
+                <img src="">
 
-        </div>
+            </div>
 
         </section> --}}
+
 
 
         <h1 class="section-titles"> About Us </h1>
@@ -205,7 +207,34 @@
 
         {{>footer}}
 
+<script>
+var slideIndex = 1;
+showDivs(slideIndex);
 
+function plusDivs(n) {
+  showDivs(slideIndex += n);
+}
+
+function currentDiv(n) {
+  showDivs(slideIndex = n);
+}
+
+function showDivs(n) {
+  var i;
+  var x = document.getElementsByClassName("mySlides");
+  var dots = document.getElementsByClassName("demo");
+  if (n > x.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = x.length}
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";  
+  }
+  for (i = 0; i < dots.length; i++) {
+    dots[i].className = dots[i].className.replace(" w3-white", "");
+  }
+  x[slideIndex-1].style.display = "block";  
+  dots[slideIndex-1].className += " w3-white";
+}
+</script>
 
 </body>
 
