--- a/templates/views/partials/headerMeta.hbs
+++ b/templates/views/partials/headerMeta.hbs
@@ -5,6 +5,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Karla:wght@300&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 {{!-- CSS For Hamburger Icon --}}
 {{!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> --}}
 <link rel="icon" type="image/x-icon" href="/public/img/icons/logo_symbol.png">
